fix: debug role

--- a/notebooks/debug_steps_v5.ipynb
+++ b/notebooks/debug_steps_v5.ipynb
@@ -499,7 +499,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 12,
       "id": "adf242fb",
       "metadata": {},
       "outputs": [
@@ -530,47 +530,305 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>10</th>\n",
-              "      <td>thread:199e91bdb002d6ca</td>\n",
-              "      <td>[{'message_id': 'gmail_199eb1ab091c4ebf', 'tim...</td>\n",
+              "      <th>39</th>\n",
+              "      <td>msg:slack_C07AT51SC5R_1760378084.219729</td>\n",
+              "      <td>[{'message_id': 'slack_C07AT51SC5R_1760378084....</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "               instance_key                                           evidence\n",
-              "10  thread:199e91bdb002d6ca  [{'message_id': 'gmail_199eb1ab091c4ebf', 'tim..."
+              "                               instance_key  \\\n",
+              "39  msg:slack_C07AT51SC5R_1760378084.219729   \n",
+              "\n",
+              "                                             evidence  \n",
+              "39  [{'message_id': 'slack_C07AT51SC5R_1760378084....  "
             ]
           },
-          "execution_count": 10,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "val = \"candidate selection\"\n",
+        "val = \"searches and candidate pipeline\"\n",
         "rows = df_recruiting[df_recruiting[\"state.step\"] == val]\n",
         "rows[[\"instance_key\", \"evidence\"]].head(3)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 13,
       "id": "32f5f8a8",
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "[{'message_id': 'gmail_199eb1ab091c4ebf',\n",
-              "  'timestamp': '2025-10-16T00:23:14',\n",
-              "  'event_type': 'decision',\n",
+              "[{'message_id': 'slack_C07AT51SC5R_1760378084.219729',\n",
+              "  'timestamp': '2025-10-13T14:54:44.219729',\n",
+              "  'event_type': 'status_update',\n",
               "  'confidence': 0.74,\n",
-              "  'snippet': 'I don’t think guido or german will work'}]"
+              "  'snippet': '*HR updates* \\n*15 searches ongoing*\\n\\n*AVM*\\n - 4 new openings:\\n    Starting the searches\\n\\n*AI positions*\\n- 2 internal\\n- 2 for Chromatics\\nCandidates in the pipeline'}]"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 13,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "rows.evidence.item()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "id": "56920c6e",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>instance_key</th>\n",
+              "      <th>evidence</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>58</th>\n",
+              "      <td>msg:slack_C07BF79R864_1755365728.164129</td>\n",
+              "      <td>[{'message_id': 'slack_C07BF79R864_1755365728....</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                               instance_key  \\\n",
+              "58  msg:slack_C07BF79R864_1755365728.164129   \n",
+              "\n",
+              "                                             evidence  \n",
+              "58  [{'message_id': 'slack_C07BF79R864_1755365728....  "
+            ]
+          },
+          "execution_count": 14,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "val = \"candidate outreach approval\"\n",
+        "rows = df_recruiting[df_recruiting[\"state.step\"] == val]\n",
+        "rows[[\"instance_key\", \"evidence\"]].head(3)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "id": "1c21d666",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'message_id': 'slack_C07BF79R864_1755365728.164129',\n",
+              "  'timestamp': '2025-08-16T14:35:28.164129',\n",
+              "  'event_type': 'request',\n",
+              "  'confidence': 0.74,\n",
+              "  'snippet': \"can we contact him directly - <mailto:Mario.y.toribio@gmail.com|Mario.y.toribio@gmail.com>\\n\\nHe says he's interested in the Chromatics role\"}]"
+            ]
+          },
+          "execution_count": 15,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "rows.evidence.item()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "id": "cf998536",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>instance_key</th>\n",
+              "      <th>evidence</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>64</th>\n",
+              "      <td>msg:slack_C07BF79R864_1757962773.892269</td>\n",
+              "      <td>[{'message_id': 'slack_C07BF79R864_1757962773....</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                               instance_key  \\\n",
+              "64  msg:slack_C07BF79R864_1757962773.892269   \n",
+              "\n",
+              "                                             evidence  \n",
+              "64  [{'message_id': 'slack_C07BF79R864_1757962773....  "
+            ]
+          },
+          "execution_count": 16,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "val = \"candidate follow-up / timing decision\"\n",
+        "rows = df_recruiting[df_recruiting[\"state.step\"] == val]\n",
+        "rows[[\"instance_key\", \"evidence\"]].head(3)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "id": "664c3037",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'message_id': 'slack_C07BF79R864_1757962773.892269',\n",
+              "  'timestamp': '2025-09-15T15:59:33.892269',\n",
+              "  'event_type': 'decision',\n",
+              "  'confidence': 0.74,\n",
+              "  'snippet': 'I think we should definitey keep him in mind and I told him we would.\\n\\nFor now - we need to put him off.'}]"
+            ]
+          },
+          "execution_count": 17,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "rows.evidence.item()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "id": "54588af2",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>instance_key</th>\n",
+              "      <th>evidence</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>69</th>\n",
+              "      <td>msg:slack_C07BF79R864_1759268478.391709</td>\n",
+              "      <td>[{'message_id': 'slack_C07BF79R864_1759268478....</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                               instance_key  \\\n",
+              "69  msg:slack_C07BF79R864_1759268478.391709   \n",
+              "\n",
+              "                                             evidence  \n",
+              "69  [{'message_id': 'slack_C07BF79R864_1759268478....  "
+            ]
+          },
+          "execution_count": 18,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "val = \"notes/documentation shared\"\n",
+        "rows = df_recruiting[df_recruiting[\"state.step\"] == val]\n",
+        "rows[[\"instance_key\", \"evidence\"]].head(3)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "id": "7d639719",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'message_id': 'slack_C07BF79R864_1759268478.391709',\n",
+              "  'timestamp': '2025-09-30T18:41:18.391709',\n",
+              "  'event_type': 'doc_shared',\n",
+              "  'confidence': 0.74,\n",
+              "  'snippet': 'Detailed notes <https://docs.google.com/document/d/1Eoy8Cj1gsfkr7r2H6xpzjH6IsUfuQpsO0blun2kcMro/edit?tab=t.0|here.>'}]"
+            ]
+          },
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -582,7 +840,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "56920c6e",
+      "id": "890a7573",
       "metadata": {},
       "outputs": [],
       "source": []
