fix: clean up coverage report

--- a/notebooks/debug_role_v3.ipynb
+++ b/notebooks/debug_role_v3.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 11,
       "id": "c6f0be8e",
       "metadata": {},
       "outputs": [],
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 12,
       "id": "f821498a",
       "metadata": {},
       "outputs": [
@@ -33,7 +33,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Using run: 20260129_014857\n",
+            "Using run: 20260129_161920\n",
             "(85, 70)\n"
           ]
         },
@@ -68,7 +68,7 @@
               "      <th>0</th>\n",
               "      <td>14</td>\n",
               "      <td>85</td>\n",
-              "      <td>7</td>\n",
+              "      <td>3</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -76,10 +76,10 @@
             ],
             "text/plain": [
               "   non_empty_raw_role  canonical_role_present  canonical_role_other\n",
-              "0                  14                      85                     7"
+              "0                  14                      85                     3"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 13,
       "id": "400e496f",
       "metadata": {},
       "outputs": [
@@ -265,7 +265,7 @@
               "[2 rows x 70 columns]"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -276,7 +276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 14,
       "id": "d809c60b",
       "metadata": {},
       "outputs": [
@@ -332,7 +332,7 @@
               "1     AI Engineer        AI Engineer    AI Engineer                completed"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -344,7 +344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 15,
       "id": "1df86f51",
       "metadata": {},
       "outputs": [
@@ -364,7 +364,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -375,7 +375,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 16,
       "id": "554716e3",
       "metadata": {},
       "outputs": [
@@ -383,13 +383,17 @@
           "data": {
             "text/plain": [
               "canonical_role\n",
-              "Unknown        71\n",
-              "AI Engineer     7\n",
-              "Other           7\n",
+              "Unknown                71\n",
+              "AI Engineer             7\n",
+              "Other                   3\n",
+              "Data Scientist          1\n",
+              "Product Manager         1\n",
+              "Fullstack Developer     1\n",
+              "Backend Engineer        1\n",
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -400,7 +404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 17,
       "id": "a4433105",
       "metadata": {},
       "outputs": [
@@ -418,7 +422,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -429,7 +433,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 18,
       "id": "e76b25a1",
       "metadata": {},
       "outputs": [],
@@ -439,7 +443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 19,
       "id": "40b13159",
       "metadata": {},
       "outputs": [
@@ -458,7 +462,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -469,7 +473,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 20,
       "id": "6e916dc2",
       "metadata": {},
       "outputs": [
@@ -477,13 +481,17 @@
           "data": {
             "text/plain": [
               "canonical_role\n",
-              "Unknown        18\n",
-              "AI Engineer     7\n",
-              "Other           6\n",
+              "Unknown                18\n",
+              "AI Engineer             7\n",
+              "Other                   2\n",
+              "Data Scientist          1\n",
+              "Product Manager         1\n",
+              "Fullstack Developer     1\n",
+              "Backend Engineer        1\n",
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
